--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+    networks:
+      - medusa_network
 
   redis:
     image: redis:7-alpine
@@ -23,6 +25,39 @@ services:
       - "6379:6379"
     volumes:
       - redis_data:/data
+    networks:
+      - medusa_network
+
+  backend:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: medusa_backend
+    environment:
+      NODE_ENV: production
+      DATABASE_URL: postgres://medusa_user:medusa_password@postgres:5432/medusa_db
+      REDIS_URL: redis://redis:6379
+      JWT_SECRET: ${JWT_SECRET:-supersecret}
+      COOKIE_SECRET: ${COOKIE_SECRET:-supersecret}
+      PORT: 9000
+      STORE_CORS: ${STORE_CORS:-http://localhost:3000}
+      ADMIN_CORS: ${ADMIN_CORS:-http://localhost:7001}
+    ports:
+      - "9000:9000"
+    volumes:
+      - ./uploads:/app/uploads
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_started
+    networks:
+      - medusa_network
+    restart: unless-stopped
+
+networks:
+  medusa_network:
+    driver: bridge
 
 volumes:
   postgres_data:
