--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -20,7 +20,7 @@ on:
 
 env:
   AZURE_RESOURCE_GROUP: althion-prod-rg
-  ACR_NAME: althionprodacr
+  ACR_NAME: althionprodacrhytx3c25d7d4g
   IMAGE_NAME: althion-backend
   APP_NAME: althion-prod-backend
 
