--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -25,41 +25,10 @@ env:
   APP_NAME: althion-prod-backend
 
 jobs:
-  build:
-    name: Build Backend
+  build-and-push:
+    name: Build & Push (ACR Build)
     runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: backend/package-lock.json
-
-      - name: Install dependencies
-        working-directory: backend
-        run: npm ci --legacy-peer-deps
-
-      - name: Build TypeScript
-        working-directory: backend
-        run: npm run build
-
-      - name: Run tests
-        working-directory: backend
-        run: npm test || true
-
-  docker-build-push:
-    name: Build & Push Docker Image
-    runs-on: ubuntu-latest
-    needs: build
     if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
-
-    outputs:
-      image-tag: ${{ steps.meta.outputs.tags }}
 
     steps:
       - name: Checkout code
@@ -70,47 +39,21 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Get ACR credentials
-        id: acr
+      - name: Build and Push with ACR Build
         uses: azure/cli@v2
         with:
           inlineScript: |
-            ACR_LOGIN_SERVER=$(az acr show --name ${{ env.ACR_NAME }} --query loginServer -o tsv)
-            ACR_USERNAME=$(az acr credential show --name ${{ env.ACR_NAME }} --query username -o tsv)
-            ACR_PASSWORD=$(az acr credential show --name ${{ env.ACR_NAME }} --query "passwords[0].value" -o tsv)
-            echo "login-server=$ACR_LOGIN_SERVER" >> $GITHUB_OUTPUT
-            echo "username=$ACR_USERNAME" >> $GITHUB_OUTPUT
-            echo "password=$ACR_PASSWORD" >> $GITHUB_OUTPUT
-
-      - name: Login to ACR
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ steps.acr.outputs.login-server }}
-          username: ${{ steps.acr.outputs.username }}
-          password: ${{ steps.acr.outputs.password }}
-
-      - name: Docker metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ steps.acr.outputs.login-server }}/${{ env.IMAGE_NAME }}
-          tags: |
-            type=sha,prefix=
-            type=raw,value=latest
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: ./backend
-          file: ./backend/Dockerfile
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+            az acr build \
+              --registry ${{ env.ACR_NAME }} \
+              --image ${{ env.IMAGE_NAME }}:${{ github.sha }} \
+              --image ${{ env.IMAGE_NAME }}:latest \
+              --file ./backend/Dockerfile \
+              ./backend
 
   deploy:
     name: Deploy to Azure
     runs-on: ubuntu-latest
-    needs: docker-build-push
+    needs: build-and-push
     environment: production
 
     steps:
@@ -119,20 +62,19 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
+      - name: Get ACR Login Server
+        id: acr
+        uses: azure/cli@v2
+        with:
+          inlineScript: |
+            ACR_LOGIN_SERVER=$(az acr show --name ${{ env.ACR_NAME }} --query loginServer -o tsv)
+            echo "login-server=$ACR_LOGIN_SERVER" >> $GITHUB_OUTPUT
+
       - name: Deploy to App Service
         uses: azure/webapps-deploy@v3
         with:
           app-name: ${{ env.APP_NAME }}
-          images: ${{ needs.docker-build-push.outputs.image-tag }}
-
-      - name: Run database migrations
-        uses: azure/cli@v2
-        with:
-          inlineScript: |
-            echo "Running database migrations..."
-            # Migrations are run automatically on container startup
-            # Add explicit migration command here if needed
-            echo "Migrations complete!"
+          images: ${{ steps.acr.outputs.login-server }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
 
       - name: Health check
         run: |
