--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -43,41 +43,10 @@ env:
   APP_NAME: althion-prod-frontend
 
 jobs:
-  build:
-    name: Build Frontend
+  build-and-push:
+    name: Build & Push (ACR Build)
     runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci --legacy-peer-deps
-
-      - name: Lint
-        run: npm run lint || true
-
-      - name: Build Next.js
-        run: npm run build
-        env:
-          NEXT_PUBLIC_SANITY_PROJECT_ID: ${{ secrets.SANITY_PROJECT_ID }}
-          NEXT_PUBLIC_SANITY_DATASET: ${{ secrets.SANITY_DATASET }}
-          NEXT_PUBLIC_MEDUSA_BACKEND_URL: https://althion-prod-backend.azurewebsites.net
-
-  docker-build-push:
-    name: Build & Push Docker Image
-    runs-on: ubuntu-latest
-    needs: build
     if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
-
-    outputs:
-      image-tag: ${{ steps.meta.outputs.tags }}
 
     steps:
       - name: Checkout code
@@ -88,51 +57,24 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Get ACR credentials
-        id: acr
+      - name: Build and Push with ACR Build
         uses: azure/cli@v2
         with:
           inlineScript: |
-            ACR_LOGIN_SERVER=$(az acr show --name ${{ env.ACR_NAME }} --query loginServer -o tsv)
-            ACR_USERNAME=$(az acr credential show --name ${{ env.ACR_NAME }} --query username -o tsv)
-            ACR_PASSWORD=$(az acr credential show --name ${{ env.ACR_NAME }} --query "passwords[0].value" -o tsv)
-            echo "login-server=$ACR_LOGIN_SERVER" >> $GITHUB_OUTPUT
-            echo "username=$ACR_USERNAME" >> $GITHUB_OUTPUT
-            echo "password=$ACR_PASSWORD" >> $GITHUB_OUTPUT
-
-      - name: Login to ACR
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ steps.acr.outputs.login-server }}
-          username: ${{ steps.acr.outputs.username }}
-          password: ${{ steps.acr.outputs.password }}
-
-      - name: Docker metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ steps.acr.outputs.login-server }}/${{ env.IMAGE_NAME }}
-          tags: |
-            type=sha,prefix=
-            type=raw,value=latest
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          build-args: |
-            NEXT_PUBLIC_SANITY_PROJECT_ID=${{ secrets.SANITY_PROJECT_ID }}
-            NEXT_PUBLIC_SANITY_DATASET=${{ secrets.SANITY_DATASET }}
-            NEXT_PUBLIC_MEDUSA_BACKEND_URL=https://althion-prod-backend.azurewebsites.net
+            az acr build \
+              --registry ${{ env.ACR_NAME }} \
+              --image ${{ env.IMAGE_NAME }}:${{ github.sha }} \
+              --image ${{ env.IMAGE_NAME }}:latest \
+              --file ./Dockerfile \
+              --build-arg NEXT_PUBLIC_SANITY_PROJECT_ID=${{ secrets.SANITY_PROJECT_ID }} \
+              --build-arg NEXT_PUBLIC_SANITY_DATASET=${{ secrets.SANITY_DATASET }} \
+              --build-arg NEXT_PUBLIC_MEDUSA_BACKEND_URL=https://althion-prod-backend.azurewebsites.net \
+              .
 
   deploy:
     name: Deploy to Azure
     runs-on: ubuntu-latest
-    needs: docker-build-push
+    needs: build-and-push
     environment: production
 
     steps:
@@ -141,11 +83,19 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
+      - name: Get ACR Login Server
+        id: acr
+        uses: azure/cli@v2
+        with:
+          inlineScript: |
+            ACR_LOGIN_SERVER=$(az acr show --name ${{ env.ACR_NAME }} --query loginServer -o tsv)
+            echo "login-server=$ACR_LOGIN_SERVER" >> $GITHUB_OUTPUT
+
       - name: Deploy to App Service
         uses: azure/webapps-deploy@v3
         with:
           app-name: ${{ env.APP_NAME }}
-          images: ${{ needs.docker-build-push.outputs.image-tag }}
+          images: ${{ steps.acr.outputs.login-server }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
 
       - name: Health check
         run: |
