--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,7 +28,7 @@ services:
     environment:
       NODE_ENV: production
       PORT: 9000
-      DATABASE_URL: postgres://${POSTGRES_USER:-medusa_user}:${POSTGRES_PASSWORD:-medusa_password}@postgres:5432/${POSTGRES_DB:-medusa_db}
+      DATABASE_URL: ${DATABASE_URL:-postgres://medusa_user:medusa_password@postgres:5432/medusa_db}
       REDIS_URL: redis://redis:6379
       JWT_SECRET: ${JWT_SECRET}
       COOKIE_SECRET: ${COOKIE_SECRET}
