feat: Add scripts and data copying for seeding in Dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -28,6 +28,10 @@ WORKDIR /app
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/dist ./dist
 
+# Copy scripts and data for seeding
+COPY --from=builder /app/scripts ./scripts
+COPY --from=builder /app/data ./data
+
 # Copy necessary files
 COPY index.js ./
 COPY medusa-config.js ./
